# reidThermal

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  Hist.cpp  bg_fg_mog.cpp  bgm.cpp  bilateral_filter.cpp  hog.cpp  hog_detection.cpp  irpeople.cpp  letterRecog.cpp  mog_and_hog.cpp  mog_extractor.cpp  test.cpp
General/: Design Report.lyx  Design Template.lyx  Final Paper.lyx  List of Colour Attributes.lyx  Literature Review.lyx  Logbook.lyx  Project Plan.lyx  Specification.lyx  gantt.tex
General/Poster/: poster.tex
Poster/: poster.tex
src/: CMakeCache.txt  CMakeLists.txt  Makefile  MogHog  bayesVersion.cpp  cmake_install.cmake  featureTesting.cpp  features.cpp  kalmanTest.cpp  main  main.cpp  mog_and_hog.cpp  multipleCamerasTest.cpp  old.cpp  person.cpp  person.hpp  relativeProbs.cpp  singleTarget.cpp  toby.cpp
src/oldFiles/: multipleCamerasTest.cpp  reidAllFeatures.cpp  singleTarget
