cmake_minimum_required(VERSION 2.8)
project( BgFg )
find_package( OpenCV REQUIRED )
add_compile_options(-g) 
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( BgFg bg_fg_mog.cpp )
target_link_libraries( BgFg ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( Bilateral )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Bilateral bilateral_filter.cpp )
target_link_libraries( Bilateral ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( Mog )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Mog mog_extractor.cpp )
target_link_libraries( Mog ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( Hog )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Hog hog.cpp )
target_link_libraries( Hog ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( MogHog )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( MogHog mog_and_hog.cpp )
target_link_libraries( MogHog ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( Kalman )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Kalman kalman.cpp )
target_link_libraries( Kalman ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( Haar )
find_package( OpenCV REQUIRED )
add_compile_options(-g) 
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Haar irpeople.cpp )
target_link_libraries( Haar ${OpenCV_LIBS} )