cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( kalmanTest )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( kalmanTest kalmanTest.cpp )
target_link_libraries( kalmanTest ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( person )
find_package( OpenCV REQUIRED )
add_compile_options(-g)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( person person.cpp )
target_link_libraries( person ${OpenCV_LIBS} )