CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(reidThermal)
SET(CMAKE_BUILD_TYPE Release)
SET(OpenCV_DIR /home/tom/Documents/Project/reidThermal/src)
FIND_PACKAGE(OpenCV REQUIRED)
ADD_COMPILE_OPTIONS(-g)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(BEFORE ${PROJECT_SOURCE_DIR}/*.hpp)
ADD_EXECUTABLE(main main.cpp  person.cpp)
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS})

cmake_minimum_required(VERSION 2.8)
project(singleTarget)
find_package(OpenCV REQUIRED)
add_compile_options(-g)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(singleTarget singleTarget.cpp)
target_link_libraries(singleTarget ${OpenCV_LIBS})