cmake_minimum_required(VERSION 2.8)
project(reidThermal)
set(CMAKE_BUILD_TYPE Release)
set(OpenCV_DIR /home/tom/Documents/Project/reidThermal/src)
find_package(OpenCV REQUIRED)
add_compile_options(-std=c++11 -g)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(before ${project_source_dir}/*.hpp)
add_executable(main main.cpp  person.cpp)
target_link_libraries(main ${OpenCV_LIBS})